Bug 1482317: When the remote control icon is hidden, hide it for accessibility too. r=johannh
remote-control-icon doesn't have an image/width/height when the remotecontrol attribute isn't set on #main-window, so it's invisible (visually).
However, it is still exposed to accessibility, as it is not marked as hidden in any definite way.
This change applies CSS visibility: collapse by default, causing this to be hidden for accessibility too.
That is then overridden by the existing visibility: visible when the remotecontrol attribute is set.

Differential Revision: https://phabricator.services.mozilla.com/D3074

UltraBlame original commit: aae2db09d0b1cbd0a27abc764f27471cdae8bc07

--- a/browser/themes/shared/identity-block/identity-block.inc.css
+++ b/browser/themes/shared/identity-block/identity-block.inc.css
@@ -275,7 +275,8 @@
 
 
 #connection-icon,
-#extension-icon {
+#extension-icon,
+#remote-control-icon {
   visibility: collapse;
 }
 #urlbar[pageproxystate="valid"] > #identity-box.verifiedDomain > #connection-icon,
@@ -307,8 +308,6 @@
   list-style-image: url(chrome://mozapps/skin/extensions/extensionGeneric-16.svg);
   visibility: visible;
 }
-
-
 
 #main-window[remotecontrol] #remote-control-icon {
   list-style-image: url(chrome://browser/content/static-robot.png);
